# ocr-app-cpp

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile.windows  Info.plist.in  README.md  build-windows.sh  toolchain-mingw.cmake
.github/workflows/: c-cpp.yml
qml/: Main.qml
resources/: app.rc
src/: main.cpp  ocrprocessor.cpp  ocrprocessor.h  utils.cpp  utils.h
tests/: test_utils.cpp
